--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,6 @@
     <script defer src="main.dart.js"></script>
   </head>
   <body>
-    <my-app>Грузим...</my-app>
+    <codefest>Грузим...</codefest>
   </body>
 </html>
