--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <script defer src="main.dart.js"></script>
+    <base href="/">
   </head>
   <body>
     <codefest>Грузим...</codefest>
