--- a/web/index.html
+++ b/web/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Сodefest Х</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <script defer src="main.dart.js"></script>
-    <base href="/">
-  </head>
-  <body>
-    <codefest>Грузим...</codefest>
-  </body>
+<head>
+  <title>Сodefest Х</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script defer src="main.dart.js"></script>
+  <base href="/">
+</head>
+<body>
+
+<codefest>
+  Loading...
+</codefest>
+
+</body>
 </html>
