--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -1,5 +1,5 @@
 <div
-  [class.hidden]="isError || !isReady">
+  [class.hidden]="isError">
 
   <router-outlet
     [routes]="Routes.all">
@@ -7,12 +7,8 @@
 </div>
 
 <div
-  *ngIf="!isReady || isError"
+  *ngIf="isError"
   class="info">
-
-  <material-spinner
-    *ngIf="!isReady && !isError">
-  </material-spinner>
 
   <h2
     *ngIf="isError"
