Add button component add variables

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
   <title>Сodefest Х</title>
   <link rel="preload" href="assets/fonts/manrope-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="assets/fonts/manrope-bold.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="stylesheet" href="assets/styles/index.css">
+  <link rel="stylesheet" href="assets/styles/style.css">
   <link rel="icon" type="image/png" href="favicon.png">
   <script defer src="/main.dart.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
