--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Сodefest Х</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="icon" type="image/png" href="favicon.png">
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <title>Сodefest Х</title>
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="preload" href="assets/fonts/manrope-regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="assets/fonts/manrope-bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet" href="assets/styles/style.css">
+  <link rel="icon" type="image/png" href="favicon.png">
   <script defer src="/main.dart.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136368367-1"></script>
@@ -24,10 +25,8 @@
   <base href="/">
 </head>
 <body>
-
-<codefest>
-  Loading...
-</codefest>
-
+  <codefest>
+    Loading...
+  </codefest>
 </body>
 </html>
