show toast when update

--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -13,3 +13,7 @@
     Что-то пошло не так, попробуй перезагрузить страницу :|
   </h2>
 </div>
+
+<new-version-popup
+  *ngIf="isUpdateAvailable">
+</new-version-popup>
