shim MediaSource for dart_sdk / iOS compatibility

--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
   <link rel="preload" href="assets/fonts/manrope-bold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="assets/styles/style.css">
   <link rel="icon" type="image/png" href="favicon.png">
+  <script>!function(){if(window.MediaSource)return;window.MediaSource=function(){return{sourceBuffers:{constructor: function(){}}}};window.MediaSource.fake=true}()</script>
   <script defer src="/main.dart.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136368367-1"></script>
