make more useful release notes

--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -15,5 +15,6 @@
 </div>
 
 <new-version-popup
-  *ngIf="isUpdateAvailable">
+  *ngIf="isUpdateAvailable"
+  [message]="releaseNote">
 </new-version-popup>
