--- a/web/index.html
+++ b/web/index.html
@@ -7,15 +7,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Сodefest Х</title>
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="preload" href="assets/fonts/manrope-regular.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="assets/fonts/manrope-bold.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="stylesheet" href="assets/styles/style.css">
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="preload" href="/assets/fonts/manrope-regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/assets/fonts/manrope-bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet" href="/assets/styles/style.css">
+  <link rel="icon" type="image/png" href="/favicon.png">
   <script>!function(){if(window.MediaSource)return;window.MediaSource=function(){return{sourceBuffers:{constructor: function(){}}}};window.MediaSource.fake=true}()</script>
   <script defer src="/main.dart.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136368367-1"></script>
+  <script async src="//www.googletagmanager.com/gtag/js?id=UA-136368367-1"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
 
@@ -26,7 +26,6 @@
       gtag('js', new Date());
       gtag('config', 'UA-136368367-1');
   </script>
-  <base href="/">
 </head>
 <body>
 
