popup: rewrite popup

--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -14,7 +14,9 @@
   </h2>
 </div>
 
-<new-version-popup
-  *ngIf="isUpdateAvailable"
-  [message]="releaseNote">
-</new-version-popup>
+<div class="popups" aria-live="polite">
+  <new-version-popup
+    *ngIf="isUpdateAvailable"
+    [message]="releaseNote">
+  </new-version-popup>
+</div>
