--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Сodefest Х</title>
+  <title>Kickoff Schedule</title>
   <link rel="manifest" href="/manifest.json">
   <script type="text/javascript" src="//cdn.pushwoosh.com/webpush/v3/pushwoosh-web-notifications.js" async></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Сodefest Х</title>
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="preload" href="/assets/fonts/manrope-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/assets/fonts/manrope-bold.woff2" as="font" type="font/woff2" crossorigin>
