Fix scroll bug, some another fixes

--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,9 @@
 </codefest>
 
 
-<svg xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+<svg
+  xmlns="http://www.w3.org/2000/svg" width="0" height="0"
+  style="display: none;">
   <symbol id="figure-0" viewBox="0 0 113 102">
     <g fill="none" fill-rule="evenodd" opacity=".45">
       <ellipse cx="24.5" cy="78" fill="#FF5EDD" rx="24.5" ry="24"></ellipse>
