--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -15,7 +15,7 @@
     style="margin-top: 48px;"
     class="button button-primary button-full-width"
   >
-    Перезагрузить
+    Reload
   </button>
 </empty-state>
 
