--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,9 @@
   <link rel="preload" href="/assets/fonts/manrope-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/assets/fonts/manrope-bold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="/assets/styles/style.css">
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" type="image/png" href="/icon-228x228.png" sizes="228x228">
+  <link rel="apple-touch-icon" type="image/png" href="/icon-228x228.png">
   <script>!function(){if(window.MediaSource)return;window.MediaSource=function(){return{sourceBuffers:{constructor: function(){}}}};window.MediaSource.fake=true}()</script>
   <script defer src="/main.dart.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
