update js version

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/png" href="/icon-228x228.png" sizes="228x228">
   <link rel="apple-touch-icon" type="image/png" href="/icon-228x228.png">
   <script>!function(){if(window.MediaSource)return;window.MediaSource=function(){return{sourceBuffers:{constructor: function(){}}}};window.MediaSource.fake=true}()</script>
-  <script defer src="/main.dart.js"></script>
+  <script defer src="/main.dart.js?v=2.0.1"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="//www.googletagmanager.com/gtag/js?id=UA-136368367-1"></script>
   <script>
