--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kickoff Schedule</title>
+  <title>
+    DartUp 2019
+  </title>
   <link rel="manifest" href="/manifest.json">
   <script type="text/javascript" src="//cdn.pushwoosh.com/webpush/v3/pushwoosh-web-notifications.js" async></script>
   <meta charset="utf-8">
@@ -20,11 +22,9 @@
   <script async src="//www.googletagmanager.com/gtag/js?id=UA-136368367-1"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
-
       function gtag() {
           dataLayer.push(arguments);
       }
-
       gtag('js', new Date());
       gtag('config', 'UA-136368367-1');
   </script>
@@ -34,7 +34,6 @@
 <codefest>
   Loading...
 </codefest>
-
 
 <svg
   xmlns="http://www.w3.org/2000/svg" width="0" height="0"
