move Drawer to separate component

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     DartUp 2019
   </title>
   <link rel="manifest" href="/manifest.json">
-  <script type="text/javascript" src="//cdn.pushwoosh.com/webpush/v3/pushwoosh-web-notifications.js" async></script>
+<!--  <script type="text/javascript" src="//cdn.pushwoosh.com/webpush/v3/pushwoosh-web-notifications.js" async></script>-->
   <meta charset="utf-8">
   <meta name="viewport" content="user-scalable=no">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
