--- a/web/index.html
+++ b/web/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>
-    DartUp 2019
-  </title>
-  <link rel="manifest" href="/manifest.json">
-<!--  <script type="text/javascript" src="//cdn.pushwoosh.com/webpush/v3/pushwoosh-web-notifications.js" async></script>-->
   <meta charset="utf-8">
-  <meta name="viewport" content="user-scalable=no">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
+  <title>DartUp 2019</title>
+  <link rel="manifest" href="/manifest.json">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preload" href="/assets/fonts/fonts.css" as="style">
   <link rel="preload" href="/assets/fonts/manrope-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/assets/fonts/manrope-bold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="/assets/styles/style.css">
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" href="/icon-228x228.png" sizes="228x228">
-  <link rel="apple-touch-icon" type="image/png" href="/icon-228x228.png">
-  <script>!function(){if(window.MediaSource)return;window.MediaSource=function(){return{sourceBuffers:{constructor: function(){}}}};window.MediaSource.fake=true}()</script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <script>
+    !function() {
+      if (window.MediaSource) return;
+      window.MediaSource = function() {
+        return {
+          sourceBuffers: {
+            constructor: function() {}
+          }
+        }
+      };
+      window.MediaSource.fake = true
+    }();
+  </script>
   <script defer src="/main.dart.js?v=2.0.1"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="//www.googletagmanager.com/gtag/js?id=UA-136368367-1"></script>
@@ -30,35 +39,28 @@
   </script>
 </head>
 <body>
-
 <codefest>
   Loading...
 </codefest>
-
-<svg
-  xmlns="http://www.w3.org/2000/svg" width="0" height="0"
-  style="display: none;">
+<svg xmlns="http://www.w3.org/2000/svg" width="0" height="0" style="display: none;">
   <symbol id="figure-0" viewBox="0 0 113 102">
     <g fill="none" fill-rule="evenodd" opacity=".45">
       <ellipse cx="24.5" cy="78" fill="#FF5EDD" rx="24.5" ry="24"></ellipse>
       <circle cx="64.5" cy="48.5" fill="#5E99FF" r="48.5"></circle>
     </g>
   </symbol>
-
   <symbol id="figure-1" viewBox="0 0 144 95">
     <g fill="none" fill-rule="evenodd" opacity=".45">
       <path d="M46.243 94.954L42 90.71 112.711 20l4.243 4.242z" fill="#FFEF5E"></path>
       <path d="M79.477 32.576L92.627 92.4 0 22.265 144 0z" fill="#5E99FF"></path>
     </g>
   </symbol>
-
   <symbol id="figure-2" viewBox="0 0 122 171">
     <g fill="none" fill-rule="evenodd" transform="translate(-18.212 -.106)">
       <rect fill="#5EFFAE" height="96" opacity=".7" rx="48" transform="rotate(15 67 122.894)" width="96" x="19" y="74.894"></rect>
       <path d="M139.616 72.013l-38.777 53.493L39.07.106z" fill="#CB7EF9" opacity=".45"></path>
     </g>
   </symbol>
-
   <symbol id="figure-3" viewBox="0 0 142 168">
     <g fill="none" fill-rule="evenodd" opacity=".45">
       <path d="M31.746 28.265l68.418 47.45-100 22.55z" fill="#CB7EF9"></path>
@@ -66,14 +68,12 @@
       <path d="M121.83 85.332l14.826 81.93L50 112.498z" fill="#5E99FF"></path>
     </g>
   </symbol>
-
   <symbol id="figure-4" viewBox="0 0 150 118">
     <g fill="none" fill-rule="evenodd">
       <path d="M56.593.235l92.729 24.847-24.847 92.729-92.728-24.847z" fill="#FCDE98"></path>
       <path d="M100.164 41.265v47.45l-100 22.55z" fill="#FF625E" opacity=".7"></path>
     </g>
   </symbol>
-
   <symbol id="figure-5" viewBox="0 0 115 115">
     <g fill="none" fill-rule="evenodd">
       <path d="M0 90l24.25-14 14 24.25-24.249 14z" fill="#FFEF5E" opacity=".45"></path>
@@ -81,7 +81,6 @@
       <path d="M69.254 0l45.255 45.254L69.254 90.51 24 45.254z" fill="#5EFFAE" opacity=".7"></path>
     </g>
   </symbol>
-
   <symbol id="figure-6" viewBox="0 0 146 106">
     <g fill="none" fill-rule="evenodd">
       <path d="M31 59.196L34 54l38.971 22.5-3 5.196z" fill="#98FCC1" opacity=".7"></path>
@@ -90,7 +89,6 @@
       <path d="M3.8 105.082l-.776-2.898L48.423 90.02l.776 2.898z" fill="#5E99FF" opacity=".45"></path>
     </g>
   </symbol>
-
   <symbol id="figure-7" viewBox="0 0 115 115">
     <g fill="none" fill-rule="evenodd">
       <path d="M0 90l24.25-14 14 24.25-24.249 14z" fill="#A698FC" opacity=".7"></path>
@@ -98,7 +96,6 @@
       <path d="M69.254 0l45.255 45.254L69.254 90.51 24 45.254z" fill="#5E99FF" opacity=".45"></path>
     </g>
   </symbol>
-
   <symbol id="figure-8" viewBox="0 0 134 162">
     <g fill="none" fill-rule="evenodd" transform="translate(-.144)">
       <ellipse cx="72.644" cy="107" fill="#FF5EDD" opacity=".45" rx="54.5" ry="55"></ellipse>
@@ -106,21 +103,18 @@
       <path d="M.143 73l27.713-16 16 27.712-27.713 16z" fill="#98FCC1" opacity=".7"></path>
     </g>
   </symbol>
-
   <symbol id="figure-9" viewBox="0 0 97 80">
     <g fill="none" fill-rule="evenodd">
       <circle cx="63.5" cy="33.5" fill="#FF625E" opacity=".7" r="33.5"></circle>
       <path d="M0 22h58v58H0z" fill="#FFEF5E" opacity=".45"></path>
     </g>
   </symbol>
-
   <symbol id="figure-10" viewBox="0 0 127 161">
     <g fill="none" fill-rule="evenodd">
       <path d="M82.21 40l44.323 76.77-76.21 44L5.999 84z" fill="#CB7EF9" opacity=".45"></path>
       <path d="M43.093.105L95.42 52.43 52.993 94.857.667 42.53z" fill="#FEB0A5" opacity=".8"></path>
     </g>
   </symbol>
-
   <symbol id="figure-11" viewBox="0 0 126 158">
     <g fill="none" fill-rule="evenodd" transform="translate(-.402 -.52)">
       <path d="M81.612 37.52l44.323 76.77-76.21 44L5.4 81.52z" fill="#FFEF5E" opacity=".45"></path>
@@ -128,7 +122,6 @@
       <ellipse cx="39.902" cy="43.519" fill="#A698FC" opacity=".7" rx="12.5" ry="12"></ellipse>
     </g>
   </symbol>
-
   <symbol id="figure-12" viewBox="0 0 106 102">
     <g fill="none" fill-rule="evenodd" opacity=".7">
       <circle cx="17.5" cy="84.5" fill="#A698FC" r="17.5"></circle>
@@ -136,14 +129,12 @@
       <circle cx="79.5" cy="35.5" fill="#FFF" r="17.5" transform="matrix(1 0 0 -1 0 71)"></circle>
     </g>
   </symbol>
-
   <symbol id="figure-13" viewBox="0 0 142 160">
     <g fill="none" fill-rule="evenodd" transform="translate(-.836)">
       <path d="M84.164 106.5l-30.5 52.827-52.828-30.5L31.336 76z" fill="#FF625E" opacity=".7"></path>
       <circle cx="98.836" cy="44" fill="#CB7EF9" opacity=".45" r="44"></circle>
     </g>
   </symbol>
-
   <symbol id="figure-14" viewBox="0 0 181 204">
     <g fill="none" fill-rule="evenodd">
       <path d="M48.43 72.43l83.14 48-48 83.14-83.14-48z" fill="#FCDE98"></path>
@@ -151,6 +142,5 @@
     </g>
   </symbol>
 </svg>
-
 </body>
 </html>
