--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>DartUp 2019</title>
+  <title>CodeFest 2020</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preload" href="/assets/fonts/fonts.css" as="style">
   <link rel="preload" href="/assets/fonts/manrope-regular.woff2" as="font" type="font/woff2" crossorigin>
